[package]
name = "radius_wpa_psk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
radius = { version = "0.3.1", path = "radius-rs/radius" }
log = "0.4.11"
env_logger = "0.8.2"
tokio = { version = "1.0.1", features = ["signal", "net"] }
async-trait = "0.1.42"
clap = { version = "4.0.29", features = ["derive"] }
sha2 = "0.10.6"
base64 = "0.13.1"
hex-literal = "0.3.4"
hex = "0.4.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[profile.minsize]
inherits = "release"
strip = true
panic = "abort"
opt-level = 'z'
codegen-units = 1
lto = true
